# reminder-bot

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  config.properties
src/: action.rs  calendar_loop.rs  cli.rs  config.rs  handler.rs  lib.rs  main.rs  notification_loop.rs  openai_client.rs  reminder.rs  runtime.rs
src/clients/: openai_client.rs
src/events/: mod.rs  queue.rs  worker.rs
src/handlers/: discord.rs  discord_responder.rs  mod.rs
src/models/: mod.rs  notification.rs  reminder.rs  todo.rs
src/service/: approval_prompt.rs  mod.rs  notification_message_service.rs  notification_service.rs  notify_flow.rs  openai_service.rs  reminder_service.rs  routing.rs
src/tasks/: calendar_loop.rs  mod.rs  notification_loop.rs  task_runner.rs  todo_loop.rs
tests/: action_engine_flow.rs  context_flow.rs  discord_handler_responder.rs  end_to_end_flow.rs  mock_interaction_script.rs  notification_flow.rs  notify_flow.rs  routing_intent.rs  send_notification_flow.rs
