[package]
name = "reminderBot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"]}
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
uuid = { version = "1", features = ["v4"] }
serenity = "0.12.4"
inquire = "0.9.1"
reqwest = { version = "0.12.24", features = ["json"] }
memory_db = { path = "../memory_db" }
