[package]
name = "reminderBot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"]}
chrono-tz = "0.10.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
uuid = { version = "1", features = ["v4"] }
serenity = { version = "0.12.4", default-features = false, features = ["cache", "client", "gateway", "http", "model", "standard_framework", "utils", "rustls_backend"] }
inquire = "0.9.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
memory_db = { path = "../memory_db" }
